# JeskolaBuzzVST

./: .gitignore  CMakeLists.txt  README.md  build.bat  decompile.bat  machine-support.txt  machine-support_linux.txt  run_machine_tests.bat
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
installer/: BuzzBridge.iss  LICENSE.txt
scripts/: build-linux-wine.sh  build.bat  decompile.bat  install-linux.sh  package-linux.sh  run_machine_tests.bat  run_machine_tests_linux.sh  toolchain-llvm-mingw-i686.cmake  uninstall-linux.sh
src/bridge/: BridgeClient.cpp  BridgeClient.h  BridgeIPC.h  BuzzBridgeHost32.cpp
src/buzz/: BuzzCallbacks.cpp  BuzzCallbacks.h  BuzzMDKHelper.cpp  BuzzMDKHelper.h  BuzzMachineLoader.cpp  BuzzMachineLoader.h  BuzzMachineQuirks.h  BuzzOscTables.cpp  BuzzOscTables.h  BuzzParamLayout.cpp  BuzzParamLayout.h  BuzzPresetLoader.cpp  BuzzPresetLoader.h  BuzzWaveTable.cpp  BuzzWaveTable.h  MachineInterface.h  MachineInterfaceStubs.cpp
src/common/: PatchMessageBoxes.h  SEHGuard.h
src/resample/: BuzzResampler.h
src/vst3/: BuzzController.cpp  BuzzController.h  BuzzPluginFactory.cpp  BuzzPluginView.cpp  BuzzPluginView.h  BuzzProcessor.cpp  BuzzProcessor.h  EffectProcessor.cpp  EffectProcessor.h  GearScanner.cpp  GearScanner.h  GeneratorProcessor.cpp  GeneratorProcessor.h  ParameterMapping.cpp  ParameterMapping.h  SharedGearScan.h  plugids.h  version.h
tests/: TestFramework.h  TestHelpers.h  main.cpp  test_AllMachines.cpp  test_BridgeAndAudio.cpp  test_BuzzCallbacks.cpp  test_BuzzMachineLoader.cpp  test_BuzzMachineQuirks.cpp  test_BuzzOscTables.cpp  test_BuzzParamLayout.cpp  test_Comprehensive.cpp  test_GearScanner.cpp  test_HiDPI.cpp  test_InfectorDebug.cpp  test_MDK.cpp  test_Midi.cpp  test_MultiTrack.cpp  test_ParamSliders.cpp  test_ParameterMapping.cpp  test_Resampler.cpp  test_Validation.cpp  test_WaveTable.cpp  test_WorkDirect.cpp  tool_ParamDump.cpp
